# nwm-post-processing

./: .gitignore  CONTRIBUTING.md  Configuration.md  INSTALL.md  Profile.md  README.md  StyleAndApproach.md  channel_rt.env  dev_environment.sh  environment.sh  forcing.env  hpc_environment.sh  land.env  nco.md  pyproject.toml  requirements.txt  user_guide.md
post_processing/: __main__.py  configuration.py  enums.py  exceptions.py  nco.py  nwm_file.py
post_processing/interfaces/: aliases.py  work.py
post_processing/nco/: __init__.py  operation_helpers.py  operations.py  structure.py
post_processing/netcdf/: structure.py
post_processing/operations/: __init__.py  combine.py  file_filter.py  group.py  stream.py  time_bound.py  total.py
post_processing/schema/: __init__.py  base.py  manifest.py  profile.py
post_processing/transform/: __init__.py  anomaly.py  calculate_upstream_flow.py  convert.py  dimensions.py  merge.py  rename.py  reproject.py  subset.py  unit_conversion.py
post_processing/utilities/: common.py  logging.py  netcdf.py  networking.py  simple_cache.py  writer.py
post_processing/work/: __init__.py  communication.py  exceptions.py  gateway.py  orchestration.py
resources/: channel_rt_log_config.json  forcing_log_config.json  land_log_config.json  log_level_override.json  python_log_config.json  stream_only_log_config.json
resources/profiles/: analysis_assim.channel_rt.alaska.json  analysis_assim.channel_rt.conus.json  analysis_assim.channel_rt.hawaii.json  analysis_assim.channel_rt.puertorico.json  analysis_assim.forcing.alaska.json  analysis_assim.forcing.conus.json  analysis_assim.forcing.hawaii.json  analysis_assim.forcing.puertorico.json  analysis_assim.land.alaska.json  analysis_assim.land.conus.json  analysis_assim.land.hawaii.json  analysis_assim.land.puertorico.json  analysis_assim_extend.channel_rt.alaska.json  analysis_assim_extend.channel_rt.conus.json  analysis_assim_extend.forcing.alaska.json  analysis_assim_extend.forcing.conus.json  analysis_assim_extend.land.alaska.json  analysis_assim_extend.land.conus.json  analysis_assim_extend_no_da.channel_rt.alaska.json  analysis_assim_extend_no_da.channel_rt.conus.json  analysis_assim_long.channel_rt.conus.json  analysis_assim_long.land.conus.json  analysis_assim_long_no_da.channel_rt.conus.json  analysis_assim_no_da.channel_rt.alaska.json  (+78 more)
scratch/: readme.md
scripts/: add_time_to_thresholds.py  analyze_timing.py  download_input.py  generate_gridded_masks.py  get_live_profiles.py  get_shapefiles.py  get_timeseries.py  mask_from_geopackage.py  merge_jagged_csv.py  reindex_features.py
test/: data_test.py  helpers.py  output_specification.py  test_nco.py  test_output_specifications.py
(+33 files in other folders)
